<resources>
    <string name="DBBLpay_version_number_defult">1.0.0</string>
    <string name="SearchActivity">Search Activity</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_binimoy">About Binimoy</string>
    <string name="about_license">License Info</string>
    <string name="about_title">About</string>
    <string name="ac_open_instruction">Instructions</string>
    <string name="ac_open_instruction_prompt">Complete Account opening in 2 easy steps:</string>
    <string name="acc_expire_date">Expiry Date</string>
    <string name="acc_info_lable">Account Information</string>
    <string name="acc_lable">Account No.</string>
    <string name="acc_name_lable">Account Name</string>
    <string name="acc_opening_date">Opening Date</string>
    <string name="account_existence_question">New here?</string>
    <string name="account_name_et_hint">ENTER ACCOUNT NAME</string>
    <string name="account_no">Account No:</string>
    <string name="account_no_error_message">Please enter a valid account number</string>
    <string name="account_no_hint_value">Make 13 digit A/C number by removing all dot(.) and add required zero (0) after first six digit as below.</string>
    <string name="account_number">Account Number</string>
    <string name="account_number_et_hint">ENTER ACCOUNT NUMBER</string>
    <string name="account_number_example">* Account Number (Ex. 1011010001234)</string>
    <string name="account_number_note">* CBS/Agent Banking Account Number</string>
    <string name="account_number_user">Account Number*</string>
    <string name="account_open_disclaimer_text" />
    <string name="account_opening">Account Opening</string>
    <string name="account_required">Account Number is required!</string>
    <string name="account_text">" Account"</string>
    <string name="account_verification_hint">Enter The Six Digit Code</string>
    <string name="account_verification_title">Account Verification</string>
    <string name="acct_branch">Branch Name</string>
    <string name="action_next">Next</string>
    <string name="action_select">Select</string>
    <string name="action_settings">Settings</string>
    <string name="active_biller">Active Biller</string>
    <string name="activity_title_crop_photo">Edit Photo</string>
    <string name="activity_title_photo_upload">Photo</string>
    <string name="activity_title_request_money">Request Money</string>
    <string name="activity_title_request_money_qr">QR Code</string>
    <string name="add">ADD</string>
    <string name="add_account">Add Account</string>
    <string name="add_account_successful">Add Account Successful</string>
    <string name="add_beneficiary_">Add Beneficiary</string>
    <string name="add_beneficiary_hint">Click + to Add Beneficiary</string>
    <string name="add_biller_already_added">Biller Already Added</string>
    <string name="add_biller_dialog_message">"No biller is registered yet. To pay your bills, you need to add a biller first.

Would you like to add now?"</string>
    <string name="add_biller_dialog_title">Add a biller</string>
    <string name="add_biller_title">Add Biller</string>
    <string name="add_card_dialog_description">"You are not allowed to send money with Loyalty Points Card. 

Would you like to add other card now?"</string>
    <string name="add_card_dialog_title">Add Card</string>
    <string name="add_cards">Add Cards</string>
    <string name="add_money_title">Add Money</string>
    <string name="add_more_account">Add New Account?</string>
    <string name="add_vehicle_text">Add Vehicle</string>
    <string name="additional_consumer_data">Additional Consumer Data</string>
    <string name="additional_consumer_data_hint">ENTER ADDITIONAL CONSUMER DATA</string>
    <string name="additional_consumer_data_opt">Additional Consumer Data</string>
    <string name="additional_info">Additional Information</string>
    <string name="address">ADDRESS</string>
    <string name="agent_banking_text">Agent Banking Card</string>
    <string name="agree_text">I agree to the </string>
    <string name="aid_description">NexusPay</string>
    <string name="alias">Alias</string>
    <string name="all_pin_length_6">PIN length must be six digits</string>
    <string name="amount">Amount</string>
    <string name="amount_et_hint">ENTER AMOUNT</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="apdu_service_description">NexusPay HCE</string>
    <string name="apk_update_required_message">NexusPay requires a version upgrade. Do you want to upgrade now?</string>
    <string name="app_copy_right">© Dutch-Bangla Bank Limited</string>
    <string name="app_exit_confirmation_text">Do you want to exit?</string>
    <string name="app_intro_done_button">DONE</string>
    <string name="app_intro_skip_button">SKIP</string>
    <string name="app_name">NexusPay</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_login">Auto Log In</string>
    <string name="auto_logout_dialog_message">Due to inactivity, you have been logged out.</string>
    <string name="auto_logout_dialog_title">Logout</string>
    <string name="back_image_upload_validation_text">Vehicle registration (back) is not uploded.</string>
    <string name="back_photo_upload_label">Upload Registration Card(Back)</string>
    <string name="balance">Balance</string>
    <string name="balance_inq_card_picker_title">Balance Inquiry</string>
    <string name="balance_inquiry">Balance Inquiry</string>
    <string name="balance_inquiry_amount_with_bdt">%s BDT</string>
    <string name="balance_inquiry_detail_bdt">BDT</string>
    <string name="balance_inquiry_detail_card_number">Card Number</string>
    <string name="balance_inquiry_detail_card_type">Card Type</string>
    <string name="balance_inquiry_detail_credit_card_type">Credit</string>
    <string name="balance_inquiry_detail_credit_limit">Credit Limit</string>
    <string name="balance_inquiry_detail_current_balance">Available Balance</string>
    <string name="balance_inquiry_detail_current_balance_value_bdt">%s ৳</string>
    <string name="balance_inquiry_detail_current_balance_value_usd">%s $</string>
    <string name="balance_inquiry_detail_debit_card_type">Debit</string>
    <string name="balance_inquiry_detail_medical_quota_balance">Medical Quota Balance</string>
    <string name="balance_inquiry_detail_minimum_payment">Minimum Payment</string>
    <string name="balance_inquiry_detail_payment_due_date">Payment Due Date</string>
    <string name="balance_inquiry_detail_point_balance">Point Balance</string>
    <string name="balance_inquiry_detail_prepaid_card_type">Prepaid</string>
    <string name="balance_inquiry_detail_rocket_card_type">Rocket</string>
    <string name="balance_inquiry_detail_statement_balance">Statement Balance</string>
    <string name="balance_inquiry_detail_statement_date">Statement Date</string>
    <string name="balance_inquiry_detail_title">Balance Details</string>
    <string name="balance_inquiry_detail_travel_quota_balance">Travel Quota Balance</string>
    <string name="balance_inquiry_detail_usd">USD</string>
    <string name="balance_inquiry_nexus_pay_pin_text">NexusPay PIN</string>
    <string name="bill_pay">Bill Pay</string>
    <string name="bill_reference_et_hint">ENTER REFERENCE NUMBER</string>
    <string name="bill_reference_number">Bill Reference Number</string>
    <string name="biller_name_et_hint">START TYPING FOR BILLER INFO</string>
    <string name="binimoy_title">Binimoy</string>
    <string name="business_rb_text">Business</string>
    <string name="data">Data</string>
    <string name="e_commerce">E-Commerce</string>
    <string name="female_rb_text">Female</string>
    <string name="help_support_cat_name">Help &amp; Support</string>
    <string name="hint_occupation">Occupation</string>
    <string name="hint_occupation_text">Specify your occupation</string>
    <string name="home">Home</string>
    <string name="housewife_rb_text">Housewife</string>
    <string name="log_out">Log Out</string>
    <string name="male_rb_text">Male</string>
    <string name="mini_statement">Mini Statement</string>
    <string name="minutes">Minutes</string>
    <string name="mobile_top_up">Mobile TopUp</string>
    <string name="my_cards">My Cards</string>
    <string name="next_text">Next</string>
    <string name="nick_name">Nick Name</string>
    <string name="nick_name_et_hint">ENTER NICK NAME</string>
    <string name="other_bank_transfer_title">Other Bank Transfer</string>
    <string name="others_rb_text">Others</string>
    <string name="payment">Payment</string>
    <string name="qr_scan">QR Scan</string>
    <string name="request_money_dr_title">Request Money</string>
    <string name="select_a_biller">Select a Biller</string>
    <string name="send_money_dr_title">Send Money</string>
    <string name="service_rb_text">Service</string>
    <string name="settings">Settings</string>
    <string name="sms">SMS</string>
    <string name="store_locator">Store Locator</string>
    <string name="student_rb_text">Student</string>
    <string name="text_account_length_suggest">(3-17 digits)</string>
    <string name="text_account_name">Account Name</string>
    <string name="text_account_name_length_suggest">(3-20 letters)</string>
    <string name="text_account_number">Account Number</string>
    <string name="text_add_beneficiary">Add Beneficiary</string>
    <string name="text_bank_name">Bank Name</string>
    <string name="text_beneficiary_account_details">Beneficiary Account Details</string>
    <string name="text_beneficiary_account_name">Beneficiary Account Name</string>
    <string name="text_beneficiary_account_number">Beneficiary Account Number</string>
    <string name="text_branch_name">Branch Name</string>
    <string name="text_district">District</string>
    <string name="text_enter_nick_name">ENTER NICK NAME</string>
    <string name="text_routing_number">Routing Number</string>
    <string name="validity">Validity</string>
    <string name="vehicle_management">Vehicle Management</string>
</resources>