<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@id/group_feature" android:checkableBehavior="single">
        <item android:icon="@drawable/ic_home" android:id="@id/nav_home" android:title="@string/home" />
        <item android:icon="@drawable/ic_acc_opening" android:id="@id/nav_account_opening" android:title="@string/account_opening" />
        <item android:icon="@drawable/ic_mobile_top_up" android:id="@id/nav_mobile_top_up" android:title="@string/mobile_top_up" />
        <item android:icon="@drawable/ic_bill_pay" android:id="@id/nav_bill_pay" android:title="@string/bill_pay" />
        <item android:icon="@drawable/ic_send_money" android:id="@id/nav_fund_transfer" android:title="@string/send_money_dr_title" />
        <item android:icon="@drawable/ic_request_money" android:id="@id/nav_fund_transfer_request" android:title="@string/request_money_dr_title" />
        <item android:icon="@drawable/ic_binimoy" android:id="@id/nav_binimoy" android:title="@string/binimoy_title" />
        <item android:icon="@drawable/ic_send_money" android:id="@id/nav_fund_other_bank_transfer" android:title="@string/other_bank_transfer_title" />
        <item android:icon="@drawable/ic_e_commerce" android:id="@id/nav_e_commerce" android:visible="false" android:title="@string/e_commerce" />
        <item android:icon="@drawable/ic_payment_type" android:id="@id/nav_payment" android:title="@string/payment" />
        <item android:icon="@drawable/ic_qrscan" android:id="@id/nav_qr_scan" android:visible="false" android:title="@string/qr_scan" />
        <item android:icon="@drawable/ic_vehicle_management" android:id="@id/nav_vehicle_management" android:title="@string/vehicle_management" />
        <item android:icon="@drawable/ic_balance_inquiry" android:id="@id/nav_balance_inquiry" android:title="@string/balance_inquiry" />
        <item android:icon="@drawable/ic_mini_statement" android:id="@id/nav_mini_statement" android:title="@string/mini_statement" />
        <item android:icon="@drawable/ic_my_cards" android:id="@id/nav_my_cards" android:title="@string/my_cards" />
    </group>
    <group android:id="@id/group_settings" android:checkableBehavior="single">
        <item android:icon="@drawable/ic_add_card" android:id="@id/nav_add_cards" android:visible="false" android:title="@string/add_cards" />
        <item android:icon="@drawable/ic_storelocator" android:id="@id/nav_store_locator" android:title="@string/store_locator" />
        <item android:icon="@drawable/ic_settings" android:id="@id/nav_settings" android:title="@string/settings" />
        <item android:icon="@drawable/ic_help_support" android:id="@id/nav_settings_help_support" android:title="@string/help_support_cat_name" />
        <item android:icon="@drawable/ic_log_out" android:id="@id/nav_log_out" android:title="@string/log_out" />
    </group>
</menu>