<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/minutes" android:layout_weight="1.0" style="@style/mnoDataViewCategory" />
        <TextView android:text="@string/data" android:layout_weight="1.0" style="@style/mnoDataViewCategory" />
        <TextView android:text="@string/sms" android:layout_weight="1.0" style="@style/mnoDataViewCategory" />
        <TextView android:text="@string/validity" android:layout_weight="1.0" style="@style/mnoDataViewCategory" />
        <TextView android:text="@string/amount" android:layout_weight="1.0" style="@style/mnoDataViewCategory" />
    </LinearLayout>
    <View android:background="@color/gray_light" android:layout_width="fill_parent" android:layout_height="1.0dip" />
</LinearLayout>