<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/applicant_gender_holder_view" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/hint_occupation" />
    <LinearLayout android:orientation="vertical" android:id="@id/radio_group_ll" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip">
        <RadioGroup android:orientation="horizontal" android:id="@id/occupation_radio_group_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:weightSum="3.0">
            <RadioButton android:id="@id/service_rb" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="-5.0dip" android:checked="true" android:text="@string/service_rb_text" android:layout_weight="1.0" />
            <RadioButton android:id="@id/business_rb" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="-5.0dip" android:text="@string/business_rb_text" android:layout_weight="1.0" />
            <RadioButton android:id="@id/housewife_rb" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="-5.0dip" android:text="@string/housewife_rb_text" android:layout_weight="1.0" />
        </RadioGroup>
        <RadioGroup android:orientation="horizontal" android:id="@id/occupation_radio_group_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:weightSum="3.0">
            <RadioButton android:id="@id/student_rb" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="-5.0dip" android:text="@string/student_rb_text" android:layout_weight="1.0" />
            <RadioButton android:id="@id/occupation_others_rb" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="-5.0dip" android:text="@string/others_rb_text" android:layout_weight="1.0" />
        </RadioGroup>
    </LinearLayout>
    <EditText android:textColor="@android:color/black" android:gravity="start|center" android:id="@id/et_occupation" android:background="@drawable/edit_text_background" android:padding="5.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="40.0dip" android:hint="@string/hint_occupation_text" android:cursorVisible="false" android:maxLines="4" android:lines="2" android:maxLength="80" />
    <View android:background="@color/nav_header_bg_color" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" />
</LinearLayout>