<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/app_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/kona_black" android:id="@id/tv_details" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/text_beneficiary_account_details" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" />
    <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginStart="20.0dip" android:layout_marginEnd="10.0dip" layout="@layout/view_bank_details" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginStart="20.0dip" android:layout_marginEnd="10.0dip">
        <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/kona_black" android:id="@id/tv_account_number_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_beneficiary_account_number" />
        <TextView android:textSize="10.0sp" android:textColor="@color/kona_black" android:id="@id/tv_suggestion" android:layout_width="wrap_content" android:layout_height="16.0dip" android:text="@string/text_account_length_suggest" android:layout_marginStart="3.0dip" />
    </LinearLayout>
    <EditText android:textSize="15.0sp" android:gravity="center" android:id="@id/et_account_number" android:background="@drawable/edit_text_background" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="5.0dip" android:hint="@string/account_number_et_hint" android:maxLength="17" android:inputType="text" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginStart="20.0dip" android:layout_marginEnd="10.0dip">
        <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/kona_black" android:id="@id/tv_account_name_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_beneficiary_account_name" android:layout_marginEnd="2.0dip" />
        <TextView android:textSize="10.0sp" android:textColor="@color/kona_black" android:id="@id/tv_account_name_length_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_account_name_length_suggest" android:layout_marginEnd="10.0dip" />
    </LinearLayout>
    <EditText android:textSize="15.0sp" android:gravity="center" android:id="@id/et_account_name" android:background="@drawable/edit_text_background" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="5.0dip" android:hint="@string/account_name_et_hint" android:maxLength="@integer/beneficiary_acc_name_max_length" android:inputType="textFilter" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" />
    <Button android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center" android:id="@id/btn_next" android:background="@drawable/custom_button_selector" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="20.0dip" android:text="@string/next_text" android:paddingStart="@dimen/single_button_start_end_padding" android:paddingEnd="@dimen/single_button_start_end_padding" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" android:elevation="2.0dip" style="@style/Widget.AppCompat.Button.Colored" />
</LinearLayout>