<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@drawable/app_background" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/biller_addition_tool_bar" layout="@layout/tool_bar" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" android:layout_below="@id/biller_addition_tool_bar">
        <LinearLayout android:orientation="vertical" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:paddingStart="@dimen/single_button_start_end_margin" android:paddingEnd="@dimen/single_button_start_end_margin">
            <TextView android:textStyle="bold" android:textColor="@android:color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select_a_biller" />
            <EditText android:gravity="center" android:id="@id/biller_name" android:background="@drawable/edit_text_background" android:focusable="false" android:nextFocusDown="@id/biller_reference_number_et" android:clickable="false" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="5.0dip" android:hint="@string/biller_name_et_hint" android:maxLines="1" android:inputType="textAutoComplete" />
            <TextView android:textStyle="bold" android:textColor="@android:color/black" android:id="@id/biller_reference_number_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/bill_reference_number" />
            <EditText android:gravity="center" android:id="@id/biller_reference_number_et" android:background="@drawable/edit_text_background" android:nextFocusDown="@id/biller_nick_name_et" android:layout_width="fill_parent" android:layout_height="@dimen/edit_text_conrol_height" android:layout_marginTop="5.0dip" android:hint="@string/bill_reference_et_hint" android:maxLines="1" android:maxLength="20" android:inputType="text" />
            <TextView android:textStyle="bold" android:textColor="@android:color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/nick_name" />
            <EditText android:gravity="center" android:id="@id/biller_nick_name_et" android:background="@drawable/edit_text_background" android:layout_width="fill_parent" android:layout_height="@dimen/edit_text_conrol_height" android:layout_marginTop="5.0dip" android:hint="@string/nick_name_et_hint" android:maxLines="1" android:maxLength="12" android:inputType="textPersonName" />
            <Button android:textColor="@android:color/white" android:layout_gravity="center_horizontal" android:id="@id/add_biller_btn" android:background="@drawable/custom_button_selector" android:layout_width="fill_parent" android:layout_height="@dimen/btn_height" android:layout_marginTop="@dimen/button_top_margin" android:layout_marginBottom="50.0dip" android:text="@string/add" android:elevation="2.0dip" style="@style/Widget.AppCompat.Button.Colored" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>