<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:paddingTop="7.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/minutes_tv" android:text="@string/minutes" android:layout_weight="1.0" style="@style/mnoDataView" />
        <TextView android:id="@id/validity_tv" android:text="@string/validity" android:layout_weight="1.0" style="@style/mnoDataView" />
        <TextView android:textStyle="bold" android:textColor="@color/colorPrimaryRed" android:id="@id/amount_tv" android:text="@string/amount" android:layout_weight="1.0" style="@style/mnoDataView" />
    </LinearLayout>
</LinearLayout>