<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@drawable/app_background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/kona_black" android:id="@id/tv_beneficiary_details" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/text_beneficiary_account_details" android:layout_marginStart="20.0dip" />
        <com.google.android.material.card.MaterialCardView android:theme="@style/Theme.MaterialComponents.Light" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" app:cardCornerRadius="10.0dip" app:cardElevation="5.0dip">
            <LinearLayout android:orientation="horizontal" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <de.hdodenhof.circleimageview.CircleImageView android:id="@id/iv_bank_logo" android:layout_width="45.0dip" android:layout_height="45.0dip" android:src="@drawable/anonymous" app:civ_border_color="?colorPrimary" />
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="10.0dip">
                    <TextView android:textSize="12.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_bank_name" />
                    <TextView android:textSize="15.0sp" android:textColor="@color/kona_black" android:id="@id/tv_bank_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_bank_name" />
                    <TextView android:textSize="12.0sp" android:id="@id/tv_branch_name_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/text_branch_name" />
                    <TextView android:textSize="15.0sp" android:textColor="@color/kona_black" android:id="@id/tv_branch_name" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    <TextView android:textSize="12.0sp" android:id="@id/tv_district_name_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/text_district" />
                    <TextView android:textSize="15.0sp" android:textColor="@color/kona_black" android:id="@id/tv_district_name" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    <TextView android:textSize="12.0sp" android:id="@id/tv_routing_number_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/text_routing_number" />
                    <TextView android:textSize="15.0sp" android:textColor="@color/kona_black" android:id="@id/tv_routing_number" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    <TextView android:textSize="12.0sp" android:id="@id/tv_account_number_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/text_account_number" />
                    <TextView android:textSize="15.0sp" android:textColor="@color/kona_black" android:id="@id/tv_acc_number" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    <TextView android:textSize="12.0sp" android:id="@id/tv_account_name_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/text_account_name" />
                    <TextView android:textSize="15.0sp" android:textColor="@color/kona_black" android:id="@id/tv_acc_name" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/kona_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/nick_name" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" />
        <EditText android:textSize="15.0sp" android:gravity="center" android:id="@id/et_nick_name" android:background="@drawable/edit_text_background" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="5.0dip" android:hint="@string/text_enter_nick_name" android:maxLength="@integer/beneficiary_acc_name_max_length" android:inputType="text" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" />
        <Button android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center" android:id="@id/btn_save_beneficiary" android:background="@drawable/custom_button_selector" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="20.0dip" android:text="@string/text_add_beneficiary" android:paddingStart="@dimen/single_button_start_end_padding" android:paddingEnd="@dimen/single_button_start_end_padding" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" android:elevation="2.0dip" style="@style/Widget.AppCompat.Button.Colored" />
    </LinearLayout>
</ScrollView>