<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/radio_group_ll" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RadioGroup android:orientation="horizontal" android:id="@id/gender_radio_group" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip">
        <RadioButton android:id="@id/male_rb" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="-5.0dip" android:checked="true" android:text="@string/male_rb_text" android:layout_weight="1.0" />
        <RadioButton android:id="@id/female_rb" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="-5.0dip" android:text="@string/female_rb_text" android:layout_weight="1.0" />
        <RadioButton android:id="@id/gender_others_rb" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="-5.0dip" android:text="@string/others_rb_text" android:layout_weight="1.0" />
    </RadioGroup>
</LinearLayout>